# SchoolWar

./: README.md  config.py  main.py  map.json  pyproject.toml  test.py
static/css/: style.css
static/scripts/: config,.js  script.js
templates/: index.html  login.html
